// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CampaignItemListFeature component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "flex": 1,
            "height": "100%",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <Image
        blurRadius={128}
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "flex": 1,
              "height": "100%",
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Boom
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#27272E",
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </Text>
      <Text
        bold={false}
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
            }
          }
        >
          The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
        </Text>
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render 2`] = `
<View
  isLoading={true}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "flex": 1,
            "height": "100%",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <Image
        blurRadius={128}
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "flex": 1,
              "height": "100%",
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <Image
      fadeDuration={250}
      isLoading={true}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 24,
            "marginVertical": 1.8000000000000007,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 16,
            "marginVertical": 5,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render a Component prop 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "flex": 1,
            "height": "100%",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <Image
        blurRadius={128}
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "flex": 1,
              "height": "100%",
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={7}
          bbWidth={7}
          height={7}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginRight": 8,
              },
              null,
              Object {
                "flex": 0,
                "height": 7,
                "width": 7,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={7}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGCircle
              cx="12"
              cy="12"
              fill={
                Array [
                  0,
                  1294411566,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              r="12"
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Live
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Black",
            "fontSize": 36,
            "lineHeight": 41.4,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#27272E",
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </Text>
      <Text
        bold={false}
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
            }
          }
        >
          The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
        </Text>
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`The CampaignItemListFeature component should render a HighlightCard 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "marginHorizontal": 16,
      "marginVertical": 12,
      "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 16,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(249, 249, 251)",
            "flex": 1,
            "height": "100%",
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <Image
        blurRadius={128}
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/800/1600/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(242, 242, 247, 0.8)",
              "flex": 1,
              "height": "100%",
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      />
    </View>
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/800/1600/?random",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": null,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
              "fontFamily": "InterUI-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
        >
          Boom
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#27272E",
            }
          }
        >
          Are you telling me that you built a time machine out of a DeLorean?
        </Text>
      </Text>
      <Text
        bold={false}
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#27272E",
            "fontFamily": "InterUI-Regular",
            "fontSize": 16,
            "lineHeight": 26,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(39, 39, 46, 0.6)",
            }
          }
        >
          The way I see it, if you’re going to build a time machine into a car, why not do it with some style?
        </Text>
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 8,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;
